# smart-todo-app

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  user_stories.md
src/: __init__.py  main.py
src/cli/: __init__.py  interface.py
src/models/: __init__.py  task.py  todo_list.py
src/parsers/: __init__.py  date_parser.py  regex_patterns.py  task_parser.py  validator.py
src/services/: __init__.py  storage_service.py  task_service.py
src/utils/: __init__.py  logger.py
tests/: conftest.py  test_date_parser.py  test_regex_patterns.py  test_task_parser.py  test_task_service.py  test_validator.py
